hamburger menu close fix on mobile

--- a/style.css
+++ b/style.css
@@ -3005,6 +3005,7 @@ strong {
 
   .hamburger {
     display: flex;
+    z-index: 1001;
   }
 
   .hero {
